Create NGINX Reverse Proxy for NoloAPI

--- a/proxy/index.html
+++ b/proxy/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NoloAPI-Backend</title>
-  </head>
-  <body>
-    <h1>NOLO API Service is Healty</h1>
-  </body>
-</html>
+{"status" : "service ok"}
